Fix footer / body spacing & fix home back link in checkout

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,7 +19,6 @@ Butter Base = #FCEBD0
 
 html,
 body {
-  height: 100%;
   margin: 0;
 }
 
@@ -36,6 +35,7 @@ body {
 
 .page-content-wrapper {
   flex: 1 0 auto;
+  padding-bottom: 2rem;
 }
 
 h1,
